resources/webidl2/test/invalid/baseline/no-semicolon.txt
Syntax error at line 5, since `partial interface NoSemicolon`:
enum YouNeedOne {
^ Missing semicolon after interface
